# SQL-6

./: CMakeLists.txt  ReadMe.md  SQL-text.txt  main.cpp
